--- a/core/src/main/assets/messages/items/items_en.properties
+++ b/core/src/main/assets/messages/items/items_en.properties
@@ -2626,6 +2626,7 @@ items.weapon.melee.chensword.desc=Sword of Lungmen Military. Its performance hav
 items.weapon.melee.kazemaruweapon.name=Blossoming Shikigami
 items.weapon.melee.kazemaruweapon.desc="Children are truly believing that Kazemaru is a cute, innocent girl just a few years older than them..."
 items.weapon.melee.kazemaruweapon.stats_desc=This sword summons has 10%% chance to summon a Shadow on every strike that deals _%1$d-%2$d_ damage.
+items.weapon.melee.kazemaruweapon.typical_stats_desc=This sword summons has 10%% chance to summon a Shadow on every strike that typically deals _%1$d-%2$d_ damage.
 
 
 ##Guns Related
